--- a/src/css/project.css
+++ b/src/css/project.css
@@ -55,7 +55,9 @@
   flex-direction: column;
   width: 30%;
   height: 100%;
-  justify-content: space-between;
+}
+#project .intro .right .item {
+  margin-bottom: 40px;
 }
 #project .intro .right .item-title {
   font-weight: 600;
